* Changes on October 6, 2005.
**************************************************************************

(300) Implemented Stereo in Windows.

(301) Allowed compilation of Windows version by removing DLL decorations
from deprecated joystick interface extensions.

**************************************************************************
* Changes on October 12, 2005.
**************************************************************************

(302) Simply use autoreconf in autogen.sh, it is much simpler and the
recommended way in the autotools documentation. Removed INSTALL,
install-sh and mkinstalldirs, they are either unused or automatically
generated by autogen.sh.

(303) Moved GLUT_INIT_STATE to <GL/freeglut_ext.h>, it is not part of the
original GLUT.

**************************************************************************
* Changes on August 05, 2006.
**************************************************************************

(304) Updated build requirements for SuSE 10.1.

(305) Check fgets for return value to avoid warnings.

**************************************************************************
* Changes on September 20, 2006
**************************************************************************

(306)  Changed "fgStructure.GameMode" to "fgStructure.GameModeWindow" to
reflect better what it is

**************************************************************************
* Changes on September 21, 2006
**************************************************************************

(307)  Added an end-of-line character to a warning message about an unknown
X event type

(308)  Fixing a problem in which "glutGetWindow" would return a menu's window
instead of the menu's parent window

(309)  Added some handy comments, spacing, fixed a typo in a comment

(310)  Changed "TARGET_HOST_UNIX_X11" to "TARGET_HOST_POSIX_X11" to avoid
trademark issues, per Joe Krahn; also rationalized the other "TARGET_HOST"
definitions